# EE

./: .gitignore  Cargo.toml  ECC.py  README.md  RSA.py
data-receiver/: main.py  parser.py  results.csv
ee-experiment/: Cargo.toml  build.rs  rp2350.x
ee-experiment/.cargo/: config.toml  flash.sh
ee-experiment/src/: ecc.rs  helper.rs  logger.rs  main.rs  rsa.rs
primegen/: Cargo.toml
primegen/src/: conversions.rs  is_prime.rs  main.rs  small_primes.rs
src/: guessing_game.rs  main.rs  primes.rs
