[package]
name = "fibonacci"
version = "0.1.0"
edition = "2024"
license = "MIT"

[build-dependencies]
regex = "1.11.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
panic-halt = "1.0"
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }
usb-device = "0.3"
usbd-serial = "0.2"
linked_list_allocator = "0.10"

